# KnowYourCustomerAI

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  README_BACKEND.md  env.example  pyproject.toml  requirements.txt  runtime.txt  setup.bat  setup.sh  test_extraction.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
src/api/: main.py
src/api/routes/: process.py
src/core/: config.py  logging.py  validation.py
src/models/: __init__.py  request.py  response.py
src/services/: document_ai_client.py
